[package]
name = "http-stream-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["http2", "macros"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-server = { version = "0.6", features = ["tls-rustls"] }
rustls = "0.22"
rustls-pemfile = "2.1"
bytes = "1.5"

[dev-dependencies]
cargo-watch = "8.5" 